Restore Data Deletion and Children's Privacy sections

--- a/index.html
+++ b/index.html
@@ -125,20 +125,20 @@
                         We collect data that your device automatically sends whenever you use the App ("Log Data"). This includes diagnostic information such as your device's IP address, device model, operating system version, app usage statistics, and crash logs. We collect this data primarily to maintain and improve our service, debug technical issues, and ensure the proper functioning of integrated third-party services like Google AdMob. This data is generally non-personal and is handled by trusted third-party providers (e.g., Google Firebase/Analytics).
                     </p>
 
-                    <h2 class="text-xl font-bold mt-8 text-gray-800" id="data-deletion">8. Data Deletion Request</h2>
-                    <p class="text-gray-700 mt-2 leading-relaxed">
-                        As your data is stored locally on your device, deleting it is very simple.
-                    </p>
-                    <ul class="list-disc ml-6 mt-3 text-gray-700 leading-relaxed space-y-2">
-                        <li><strong>Local Data:</strong> To delete your resume data stored on your phone, simply open the app and use the **'Delete Profile'** button, or **uninstall the application**.</li>
-                        <li><strong>Third-Party Data:</strong> Any data temporarily sent to the AI parsing service is processed **ephemerally** (not permanently stored) and is deleted immediately after use.</li>
-                        <li><strong>Formal Request:</strong> For any formal data deletion confirmation or query, you can contact us via the <a href="#" onclick="showTab('contact'); return false;" class="text-blue-600 font-medium hover:underline">Contact Us</a> tab.</li>
-                    </ul>
-                    
-                    <h2 class="text-xl font-bold mt-8 text-gray-800">9. Children’s Privacy</h2>
-                    <p class="text-gray-700 mt-2 leading-relaxed">
-                        The App is a professional resume building tool and is <strong>not intended for use by anyone under 13 years of age.</strong> We do not knowingly collect personally identifiable information (PII) from children under 13. If you are a parent or guardian and believe your child has provided us with personal data, please contact us immediately.
-                    </p>
+                   <h2 class="text-xl font-bold mt-8 text-gray-800" id="data-deletion">8. Data Deletion Request</h2>
+<p class="text-gray-700 mt-2 leading-relaxed">
+    As your data is stored locally on your device, deleting it is very simple.
+</p>
+<ul class="list-disc ml-6 mt-3 text-gray-700 leading-relaxed space-y-2">
+    <li><strong>Local Data:</strong> To delete your resume data stored on your phone, simply open the app and use the <strong>'Delete Profile'</strong> button, or <strong>uninstall the application</strong>.</li>
+    <li><strong>Third-Party Data:</strong> Any data temporarily sent to the AI parsing service is processed <strong>ephemerally</strong> (not permanently stored) and is deleted immediately after use.</li>
+    <li><strong>Formal Request:</strong> For any formal data deletion confirmation or query, you can contact us via the <a href="#" onclick="showTab('contact'); return false;" class="text-blue-600 font-medium hover:underline">Contact Us</a> tab.</li>
+</ul>
+
+<h2 class="text-xl font-bold mt-8 text-gray-800">9. Children’s Privacy</h2>
+<p class="text-gray-700 mt-2 leading-relaxed">
+    The App is a professional resume building tool and is <strong>not intended for use by anyone under 13 years of age.</strong> We do not knowingly collect personally identifiable information (PII) from children under 13. If you are a parent or guardian and believe your child has provided us with personal data, please contact us immediately.
+</p>
                 </div>
 
                 <div id="content-terms" class="tab-content hidden">
